# mcp-eyes

./: .cursor  .gitignore  .htaccess  .markdownlint.json  .mcp.json  AGENTS.md  BROWSER_COMMANDS_VERIFIED.md  BROWSER_FIX_SUMMARY.md  BROWSER_TOOLS_ARCHITECTURE.md  BROWSER_TOOLS_FIXED.md  BROWSER_TOOLS_TEST_RESULTS.md  CI_CD_FIXES.md  CI_CD_MONITORING.md  CI_CD_RESOLUTION.md  CI_CD_TESTING.md  CSP_AND_MV3_BYPASS.md  NODE_VERSION_FIX.md  README.md  TOOLS.md  build-all.sh  build-windows.ps1  mcp-eyes-auto-install-config.json  mcp-eyes-local-config.json  package-lock.json  package.json  tasks5.md  test-all.sh  tsconfig.json  version.json
boot/: Dockerfile  README.md  build.sh
calibration_tool/: Package.swift  build.sh
control_server/: package-lock.json  package.json
docs/: AGENT_TEST_SERVER.md  AUTO_UPDATE_PLAN.md  CI_CD_PIPELINE.md  CLAUDE_IDENTITY_SETUP.md  CRASH_ANALYSIS_AND_FIXES.md  LOCAL_DEVELOPMENT.md  LOGGING_SYSTEM.md  README.md  SCREENSHOT_DEBUG_REPORT.md  WEB_SERVER_DEPLOYMENT.md  browser-automation.md  claude_mcp_setup.md  cross_compilation_notes.md  desktop-automation.md  filesystem-shell.md  grid-tools.md  linux_agent_docs.md  linux_dependency_installer.md  linux_grid_tools.md  mcp-dynamic-tools.md  multi-monitor.md  testserver_commands.md  tool-selection-guide.md  windows_agent_install.md
extension/: README.md
linux/: Dockerfile  README.md  debug-config.json  install.sh
linux/screencontrol/: CMakeLists.txt  main.cpp  screencontrol.service.in  test_server.cpp  test_server.h
linux/screencontrol/core/: config.cpp  config.h  logger.cpp  logger.h
linux/screencontrol/server/: http_server.cpp  http_server.h
linux/screencontrol/tools/: filesystem_tools.cpp  filesystem_tools.h  gui_tools.cpp  gui_tools.h  shell_tools.cpp  shell_tools.h  system_tools.cpp  system_tools.h  ui_automation.cpp  ui_automation.h
linux/screencontrol/websocket/: websocket_client.cpp  websocket_client.h
macos/: .mcp.json
native/: CMakeLists.txt
native/include/: mcp_eyes.h  platform.h
native/src/: config.cpp  discovery.cpp  http_server.cpp  main.cpp  platform_macos.mm  remote_client.cpp  web_ui.cpp
old/: advanced-server-simple.d.ts.map  advanced-server-simple.js  basic-server.js.map  browser-bridge-server.d.ts.map  browser-bridge-server.js.map  claude-identity-server.js.map  filesystem-tools.d.ts  filesystem-tools.ts  logger.js  logger.ts  mcp-sse-server.d.ts  permission-helper.d.ts  permission-helper.js  screencontrol-mcp.d.ts.map  screencontrol-mcp.js.map  screencontrol-mcp.ts  shell-tools.d.ts  shell-tools.d.ts.map  shell-tools.js  shell-tools.js.map  tool-registry.d.ts.map  tool-registry.js  tool-registry.ts  window-bounds-helper.d.ts  window-bounds-helper.js.map
scripts/: bump-version.js  set-executable.js  update-version.js
server/: README.md
service/: CMakeLists.txt  build-cross.sh
service/cmake/: mingw-w64.cmake
service/docker/: Dockerfile.cross  build.sh
service/docker/toolchains/: linux-x64.cmake  windows-arm64.cmake  windows-x64.cmake
service/docs/: MACOS_VNC_UNLOCK.md
service/include/: crypto.h  platform.h  security.h
service/install/linux/: install.sh  screencontrol.service  uninstall.sh
service/install/macos/: ScreenControlService  com.screencontrol.agent.plist  com.screencontrol.service.plist  install.sh  uninstall.sh
service/install/macos/pkg/: Distribution.xml  build_pkg.sh
service/install/macos/pkg/resources/: conclusion.html  license.html  readme.html  welcome.html
service/install/macos/pkg/scripts/: postinstall  preinstall
service/src/control_server/: command_dispatcher.cpp  command_dispatcher.h  websocket_client.cpp  websocket_client.h  websocket_client_linux_stub.cpp  websocket_client_windows.cpp
service/src/core/: config.cpp  config.h  crypto.cpp  crypto_linux_stub.cpp  crypto_windows.cpp  logger.cpp  logger.h  security.cpp
service/src/platform/linux/: main_linux.cpp  platform_linux.cpp
service/src/platform/macos/: main_macos.cpp  platform_macos.cpp
service/src/platform/windows/: main_windows.cpp  platform_windows.cpp
service/src/platform/windows/credential_provider/: CMakeLists.txt  README.md  ScreenControlCP.vcxproj  ScreenControlCredential.cpp  ScreenControlCredential.h  ScreenControlCredentialProvider.cpp  ScreenControlCredentialProvider.h  dll_main.cpp  exports.def  guid.h  resource.h  resources.rc
service/src/screen/: screen_stream.cpp  screen_stream.h
service/src/server/: http_server.cpp  http_server.h
service/src/tools/: filesystem_tools.cpp  filesystem_tools.h  shell_tools.cpp  shell_tools.h  system_tools.cpp  system_tools.h
service/src/update/: update_linux.cpp  update_macos.cpp  update_manager.cpp  update_manager.h  update_windows.cpp
src/: accessibility-first-server.js  accessibility-first-server.ts  advanced-screenshot-backup.ts  advanced-screenshot.ts  advanced-server-simple.js  advanced-server-simple.ts  advanced-server.js  advanced-server.ts  ai-enhanced-screenshot.js  basic-server.ts  browser-bridge-server.ts  claude-identity-server.ts  cross-platform.js  index.js  (+10 more)
windows/: BUILD_DOCKER.md  CMakeLists.txt  Dockerfile  README.md  build.sh  docker-build.sh
windows/MCPEyes/: AppDelegate.cpp  AppDelegate.h  MCPEyes.manifest  MCPEyes.rc  MCPServer.cpp  MCPServer.h  SettingsWindow.cpp  SettingsWindow.h  WindowsPlatform.cpp  WindowsPlatform.h  main.cpp  resource.h
windows/ScreenControlService/: CMakeLists.txt  ScreenControlService.vcxproj  main.cpp  service.cpp  service.h
windows/ScreenControlService/control_server/: websocket_client.cpp  websocket_client.h
windows/ScreenControlService/core/: config.cpp  config.h  logger.cpp  logger.h
windows/ScreenControlService/server/: http_server.cpp  http_server.h
windows/ScreenControlService/tools/: filesystem_tools.cpp  filesystem_tools.h  gui_tools.cpp  gui_tools.h  shell_tools.cpp  shell_tools.h  system_tools.cpp  system_tools.h  ui_automation.cpp  ui_automation.h
windows/ScreenControlTray/: GUIBridgeServer.cs  Program.cs  ScreenControlTray.csproj  ServiceClient.cs  SettingsForm.cs  TestServer.cs  TrayApplicationContext.cs  WebSocketClient.cs
(+322 files in other folders)
